--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,41 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 h1 {
   text-align: center;
   font-size: 50px;
   font-weight: 800;
   font-family: "Nova Mono", monospace;
+}
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: "Nova Mono", monospace;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
 }
 
 .center {
@@ -23,10 +56,11 @@ h1 {
   background-color: rgb(124, 124, 124);
   color: white;
   text-align: center;
+  padding: 10px;
 }
 
 footer p {
-    line-height: 10px;
+  line-height: 25px;
   font-family: "Nova Mono", monospace;
 }
 
