--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Nova Mono", monospace;
 }
 
 h1 {
   text-align: center;
   font-size: 50px;
   font-weight: 800;
-  font-family: "Nova Mono", monospace;
+}
+
+h3 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 800;
+  line-height: 25px;
 }
 
 .topnav {
@@ -23,7 +30,6 @@ h1 {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  font-family: "Nova Mono", monospace;
 }
 
 /* Change the color of links on hover */
@@ -61,10 +67,57 @@ h1 {
 
 footer p {
   line-height: 25px;
-  font-family: "Nova Mono", monospace;
 }
 
 a {
   text-decoration: none;
   color: rgb(0, 0, 0);
+}
+
+form input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 5px 5px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+form .focus:focus {
+  border-bottom: 3px solid #04aa6d;
+}
+
+form button {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+form button:hover {
+  background-color: #45a049;
+}
+
+.form-div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
