--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,10 @@ h1 {
 
 h3 {
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 800;
-  line-height: 25px;
+  line-height: 35px;
+  margin-bottom: 10px;
 }
 
 .topnav {
@@ -74,7 +75,7 @@ a {
   color: rgb(0, 0, 0);
 }
 
-form input[type=text], select {
+form input[type="text"] {
   width: 100%;
   padding: 12px 20px;
   margin: 5px 5px;
@@ -85,13 +86,25 @@ form input[type=text], select {
   box-sizing: border-box;
 }
 
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  margin: 5px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
 form .focus:focus {
   border-bottom: 3px solid #04aa6d;
 }
 
 form button {
   width: 100%;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -109,15 +122,16 @@ form button:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+  min-width: 300px;
 }
 
 .card {
   /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
